[project]
name = "ucp-hub-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.25.0",
    "pydantic>=2.12.5",
    "typer>=0.21.1",
    "ucp-sdk",
    "cryptography",
    "pydantic-settings>=2.12.0",
    "pyyaml>=6.0.3",
]

[tool.uv.sources]
ucp-sdk = { git = "https://github.com/Universal-Commerce-Protocol/python-sdk.git" }
